--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -33,7 +33,8 @@
             <EditText
                 android:id="@+id/login_user"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:singleLine="true"/>
         </LinearLayout>
 
         <LinearLayout
@@ -49,7 +50,8 @@
                 android:id="@+id/login_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword"
+                android:singleLine="true"/>
         </LinearLayout>
     </LinearLayout>
 
