--- a/app/src/main/res/layout/fragment_reg.xml
+++ b/app/src/main/res/layout/fragment_reg.xml
@@ -35,6 +35,7 @@ android:orientation="vertical">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/user_hint"
+            android:singleLine="true"
             android:textSize="16dp"/>
     </LinearLayout>
 
@@ -53,6 +54,7 @@ android:orientation="vertical">
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:hint="@string/password_hint"
+            android:singleLine="true"
             android:textSize="16dp"/>
     </LinearLayout>
 
@@ -71,6 +73,7 @@ android:orientation="vertical">
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:hint="@string/password_check_hint"
+            android:singleLine="true"
             android:textSize="16dp"/>
     </LinearLayout>
 </LinearLayout>
