--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -29,7 +29,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/user" />
+                android:text="@string/preUser" />
             <EditText
                 android:id="@+id/login_user"
                 android:layout_width="match_parent"
