--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:lineSpacingMultiplier="1.5"
         android:text="@string/nothing"/>
     <TextView
         android:layout_width="match_parent"
