--- a/app/src/main/res/layout/fragment_reg.xml
+++ b/app/src/main/res/layout/fragment_reg.xml
@@ -29,7 +29,7 @@ android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/user" />
+            android:text="@string/preUser" />
         <EditText
             android:id="@+id/reg_user"
             android:layout_width="match_parent"
